@@ -1,71 +1,83 @@
 package org.jabref.cli;
 
-import java.io.File;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
-import java.util.Map;
 import java.util.Optional;
+import java.util.Set;
+import java.util.Vector;
 import java.util.prefs.BackingStoreException;
 
-import org.jabref.Globals;
-import org.jabref.JabRefException;
-import org.jabref.gui.externalfiles.AutoSetLinks;
-import org.jabref.gui.importer.fetcher.EntryFetcher;
-import org.jabref.gui.importer.fetcher.EntryFetchers;
-import org.jabref.logic.bibtexkeypattern.BibtexKeyPatternUtil;
+import org.jabref.gui.Globals;
+import org.jabref.gui.externalfiles.AutoSetFileLinksUtil;
+import org.jabref.gui.undo.NamedCompound;
+import org.jabref.logic.JabRefException;
+import org.jabref.logic.bibtex.FieldWriterPreferences;
+import org.jabref.logic.citationkeypattern.CitationKeyGenerator;
+import org.jabref.logic.exporter.AtomicFileWriter;
 import org.jabref.logic.exporter.BibDatabaseWriter;
+import org.jabref.logic.exporter.BibWriter;
 import org.jabref.logic.exporter.BibtexDatabaseWriter;
-import org.jabref.logic.exporter.ExportFormat;
-import org.jabref.logic.exporter.ExportFormats;
-import org.jabref.logic.exporter.FileSaveSession;
-import org.jabref.logic.exporter.IExportFormat;
-import org.jabref.logic.exporter.SaveException;
+import org.jabref.logic.exporter.EmbeddedBibFilePdfExporter;
+import org.jabref.logic.exporter.Exporter;
+import org.jabref.logic.exporter.ExporterFactory;
 import org.jabref.logic.exporter.SavePreferences;
-import org.jabref.logic.exporter.SaveSession;
+import org.jabref.logic.exporter.TemplateExporter;
+import org.jabref.logic.exporter.XmpPdfExporter;
+import org.jabref.logic.importer.FetcherException;
 import org.jabref.logic.importer.ImportException;
+import org.jabref.logic.importer.ImportFormatPreferences;
 import org.jabref.logic.importer.ImportFormatReader;
 import org.jabref.logic.importer.OpenDatabase;
 import org.jabref.logic.importer.OutputPrinter;
+import org.jabref.logic.importer.ParseException;
 import org.jabref.logic.importer.ParserResult;
+import org.jabref.logic.importer.SearchBasedFetcher;
+import org.jabref.logic.importer.WebFetchers;
+import org.jabref.logic.importer.fileformat.BibtexParser;
 import org.jabref.logic.l10n.Localization;
 import org.jabref.logic.layout.LayoutFormatterPreferences;
-import org.jabref.logic.logging.JabRefLogger;
 import org.jabref.logic.net.URLDownload;
 import org.jabref.logic.search.DatabaseSearcher;
 import org.jabref.logic.search.SearchQuery;
+import org.jabref.logic.shared.prefs.SharedDatabasePreferences;
 import org.jabref.logic.util.OS;
-import org.jabref.model.Defaults;
-import org.jabref.model.EntryTypes;
+import org.jabref.logic.xmp.XmpPreferences;
 import org.jabref.model.database.BibDatabase;
 import org.jabref.model.database.BibDatabaseContext;
 import org.jabref.model.database.BibDatabaseMode;
 import org.jabref.model.entry.BibEntry;
-import org.jabref.model.metadata.MetaData;
+import org.jabref.model.entry.BibEntryTypesManager;
 import org.jabref.model.strings.StringUtil;
+import org.jabref.model.util.DummyFileUpdateMonitor;
+import org.jabref.model.util.FileHelper;
+import org.jabref.preferences.FilePreferences;
+import org.jabref.preferences.GeneralPreferences;
+import org.jabref.preferences.PreferencesService;
 import org.jabref.preferences.SearchPreferences;
-import org.jabref.shared.prefs.SharedDatabasePreferences;
 
 import com.google.common.base.Throwables;
-import org.apache.commons.logging.Log;
-import org.apache.commons.logging.LogFactory;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 public class ArgumentProcessor {
 
-    private static final Log LOGGER = LogFactory.getLog(ArgumentProcessor.class);
+    private static final Logger LOGGER = LoggerFactory.getLogger(ArgumentProcessor.class);
     private final JabRefCLI cli;
     private final List<ParserResult> parserResults;
     private final Mode startupMode;
+    private final PreferencesService preferencesService;
     private boolean noGUINeeded;
 
-    public ArgumentProcessor(String[] args, Mode startupMode) {
+    public ArgumentProcessor(String[] args, Mode startupMode, PreferencesService preferencesService) throws org.apache.commons.cli.ParseException {
         cli = new JabRefCLI(args);
         this.startupMode = startupMode;
+        this.preferencesService = preferencesService;
         parserResults = processArguments();
     }
 
@@ -83,6 +95,19 @@ public class ArgumentProcessor {
         return result;
     }
 
+    private static Optional<ParserResult> importBibtexToOpenBase(String argument, ImportFormatPreferences importFormatPreferences) {
+        BibtexParser parser = new BibtexParser(importFormatPreferences, new DummyFileUpdateMonitor());
+        try {
+            List<BibEntry> entries = parser.parseEntries(argument);
+            ParserResult result = new ParserResult(entries);
+            result.setToOpenTab();
+            return Optional.of(result);
+        } catch (ParseException e) {
+            System.err.println(Localization.lang("Error occurred when parsing entry") + ": " + e.getLocalizedMessage());
+            return Optional.empty();
+        }
+    }
+
     private static Optional<ParserResult> importFile(String argument) {
         String[] data = argument.split(",");
 
@@ -98,9 +123,9 @@ public class ArgumentProcessor {
             }
         } else {
             if (OS.WINDOWS) {
-                file = Paths.get(address);
+                file = Path.of(address);
             } else {
-                file = Paths.get(address.replace("~", System.getProperty("user.home")));
+                file = Path.of(address.replace("~", System.getProperty("user.home")));
             }
         }
 
@@ -131,7 +156,8 @@ public class ArgumentProcessor {
                 // * means "guess the format":
                 System.out.println(Localization.lang("Importing in unknown format") + ": " + file);
 
-                ImportFormatReader.UnknownFormatImport importResult = Globals.IMPORT_FORMAT_READER.importUnknownFormat(file);
+                ImportFormatReader.UnknownFormatImport importResult =
+                        Globals.IMPORT_FORMAT_READER.importUnknownFormat(file, new DummyFileUpdateMonitor());
 
                 System.out.println(Localization.lang("Format used") + ": " + importResult.format);
                 return Optional.of(importResult.parserResult);
@@ -152,9 +178,8 @@ public class ArgumentProcessor {
     }
 
     private List<ParserResult> processArguments() {
-
         if (!cli.isBlank() && cli.isDebugLogging()) {
-            JabRefLogger.setDebug();
+            System.err.println("use java property -Dtinylog.level=debug");
         }
 
         if ((startupMode == Mode.INITIAL_START) && cli.isShowVersion()) {
@@ -162,7 +187,7 @@ public class ArgumentProcessor {
         }
 
         if ((startupMode == Mode.INITIAL_START) && cli.isHelp()) {
-            cli.printUsage();
+            JabRefCLI.printUsage();
             noGUINeeded = true;
             return Collections.emptyList();
         }
@@ -194,27 +219,44 @@ public class ArgumentProcessor {
             }
         }
 
-        if (cli.isGenerateBibtexKeys()) {
-            regenerateBibtexKeys(loaded);
+        if (cli.isGenerateCitationKeys()) {
+            regenerateCitationKeys(loaded);
         }
 
         if (cli.isAutomaticallySetFileLinks()) {
             automaticallySetFileLinks(loaded);
         }
 
+        if ((cli.isWriteXMPtoPdf() && cli.isEmbeddBibfileInPdf()) || (cli.isWriteMetadatatoPdf() && (cli.isWriteXMPtoPdf() || cli.isEmbeddBibfileInPdf()))) {
+            System.err.println("Give only one of [writeXMPtoPdf, embeddBibfileInPdf, writeMetadatatoPdf]");
+        }
+
+        if (cli.isWriteMetadatatoPdf() || cli.isWriteXMPtoPdf() || cli.isEmbeddBibfileInPdf()) {
+            if (!loaded.isEmpty()) {
+                writeMetadatatoPdf(loaded,
+                        cli.getWriteMetadatatoPdf(),
+                        preferencesService.getXmpPreferences(),
+                        preferencesService.getFilePreferences(),
+                        preferencesService.getGeneralPreferences().getDefaultBibDatabaseMode(),
+                        Globals.entryTypesManager,
+                        preferencesService.getFieldWriterPreferences(),
+                        cli.isWriteXMPtoPdf() || cli.isWriteMetadatatoPdf(),
+                        cli.isEmbeddBibfileInPdf() || cli.isWriteMetadatatoPdf());
+            }
+        }
+
         if (cli.isFileExport()) {
             if (!loaded.isEmpty()) {
                 exportFile(loaded, cli.getFileExport().split(","));
+                LOGGER.debug("Finished export");
             } else {
                 System.err.println(Localization.lang("The output option depends on a valid import option."));
             }
         }
 
-        LOGGER.debug("Finished export");
-
         if (cli.isPreferencesExport()) {
             try {
-                Globals.prefs.exportPreferences(cli.getPreferencesExport());
+                preferencesService.exportPreferences(Path.of(cli.getPreferencesExport()));
             } catch (JabRefException ex) {
                 LOGGER.error("Cannot export preferences", ex);
             }
@@ -227,50 +269,145 @@ public class ArgumentProcessor {
         return loaded;
     }
 
-    private boolean exportMatches(List<ParserResult> loaded) {
-        String[] data = cli.getExportMatches().split(",");
-        String searchTerm = data[0].replace("\\$", " "); //enables blanks within the search term:
-        //$ stands for a blank
+    private void writeMetadatatoPdf(List<ParserResult> loaded, String filesAndCitekeys, XmpPreferences xmpPreferences, FilePreferences filePreferences, BibDatabaseMode databaseMode, BibEntryTypesManager entryTypesManager, FieldWriterPreferences fieldWriterPreferences, boolean writeXMP, boolean embeddBibfile) {
+        if (loaded.isEmpty()) {
+            LOGGER.error("The write xmp option depends on a valid import option.");
+            return;
+        }
         ParserResult pr = loaded.get(loaded.size() - 1);
         BibDatabaseContext databaseContext = pr.getDatabaseContext();
         BibDatabase dataBase = pr.getDatabase();
 
-        SearchPreferences searchPreferences = new SearchPreferences(Globals.prefs);
-        SearchQuery query = new SearchQuery(searchTerm, searchPreferences.isCaseSensitive(),
-                searchPreferences.isRegularExpression());
+        XmpPdfExporter xmpPdfExporter = new XmpPdfExporter(xmpPreferences);
+        EmbeddedBibFilePdfExporter embeddedBibFilePdfExporter = new EmbeddedBibFilePdfExporter(databaseMode, entryTypesManager, fieldWriterPreferences);
+
+        if ("all".equals(filesAndCitekeys)) {
+            for (BibEntry entry : dataBase.getEntries()) {
+                writeMetadatatoPDFsOfEntry(databaseContext, entry.getCitationKey().orElse("<no cite key defined>"), entry, filePreferences, xmpPdfExporter, embeddedBibFilePdfExporter, writeXMP, embeddBibfile);
+            }
+            return;
+        }
+
+        Vector<String> citeKeys = new Vector<>();
+        Vector<String> pdfs = new Vector<>();
+        for (String fileOrCiteKey : filesAndCitekeys.split(",")) {
+            if (fileOrCiteKey.toLowerCase(Locale.ROOT).endsWith(".pdf")) {
+                pdfs.add(fileOrCiteKey);
+            } else {
+                citeKeys.add(fileOrCiteKey);
+            }
+        }
+
+        writeMetadatatoPdfByCitekey(databaseContext, dataBase, citeKeys, filePreferences, xmpPdfExporter, embeddedBibFilePdfExporter, writeXMP, embeddBibfile);
+        writeMetadatatoPdfByFileNames(databaseContext, dataBase, pdfs, filePreferences, xmpPdfExporter, embeddedBibFilePdfExporter, writeXMP, embeddBibfile);
+    }
+
+    private void writeMetadatatoPDFsOfEntry(BibDatabaseContext databaseContext, String citeKey, BibEntry entry, FilePreferences filePreferences, XmpPdfExporter xmpPdfExporter, EmbeddedBibFilePdfExporter embeddedBibFilePdfExporter, boolean writeXMP, boolean embeddBibfile) {
+        try {
+            if (writeXMP) {
+                if (xmpPdfExporter.exportToAllFilesOfEntry(databaseContext, filePreferences, entry, List.of(entry))) {
+                    System.out.printf("Successfully written XMP metadata on at least one linked file of %s%n", citeKey);
+                } else {
+                    System.err.printf("Cannot write XMP metadata on any linked files of %s. Make sure there is at least one linked file and the path is correct.%n", citeKey);
+                }
+            }
+            if (embeddBibfile) {
+                if (embeddedBibFilePdfExporter.exportToAllFilesOfEntry(databaseContext, filePreferences, entry, List.of(entry))) {
+                    System.out.printf("Successfully embedded metadata on at least one linked file of %s%n", citeKey);
+                } else {
+                    System.out.printf("Cannot embedd metadata on any linked files of %s. Make sure there is at least one linked file and the path is correct.%n", citeKey);
+                }
+            }
+        } catch (Exception e) {
+            LOGGER.error("Failed writing metadata on a linked file of {}.", citeKey);
+        }
+    }
+
+    private void writeMetadatatoPdfByCitekey(BibDatabaseContext databaseContext, BibDatabase dataBase, Vector<String> citeKeys, FilePreferences filePreferences, XmpPdfExporter xmpPdfExporter, EmbeddedBibFilePdfExporter embeddedBibFilePdfExporter, boolean writeXMP, boolean embeddBibfile) {
+        for (String citeKey : citeKeys) {
+            List<BibEntry> bibEntryList = dataBase.getEntriesByCitationKey(citeKey);
+            if (bibEntryList.isEmpty()) {
+                System.err.printf("Skipped - Cannot find %s in library.%n", citeKey);
+                continue;
+            }
+            for (BibEntry entry : bibEntryList) {
+                writeMetadatatoPDFsOfEntry(databaseContext, citeKey, entry, filePreferences, xmpPdfExporter, embeddedBibFilePdfExporter, writeXMP, embeddBibfile);
+            }
+        }
+    }
+
+    private void writeMetadatatoPdfByFileNames(BibDatabaseContext databaseContext, BibDatabase dataBase, Vector<String> fileNames, FilePreferences filePreferences, XmpPdfExporter xmpPdfExporter, EmbeddedBibFilePdfExporter embeddedBibFilePdfExporter, boolean writeXMP, boolean embeddBibfile) {
+        for (String fileName : fileNames) {
+            Path filePath = Path.of(fileName);
+            if (!filePath.isAbsolute()) {
+                filePath = FileHelper.find(fileName, databaseContext.getFileDirectories(filePreferences)).orElse(FileHelper.find(fileName, List.of(Path.of("").toAbsolutePath())).orElse(filePath));
+            }
+            if (Files.exists(filePath)) {
+                try {
+                    if (writeXMP) {
+                        if (xmpPdfExporter.exportToFileByPath(databaseContext, dataBase, filePreferences, filePath)) {
+                            System.out.printf("Successfully written XMP metadata of at least one entry to %s%n", fileName);
+                        } else {
+                            System.out.printf("File %s is not linked to any entry in database.%n", fileName);
+                        }
+                    }
+                    if (embeddBibfile) {
+                        if (embeddedBibFilePdfExporter.exportToFileByPath(databaseContext, dataBase, filePreferences, filePath)) {
+                            System.out.printf("Successfully embedded XMP metadata of at least one entry to %s%n", fileName);
+                        } else {
+                            System.out.printf("File %s is not linked to any entry in database.%n", fileName);
+                        }
+                    }
+                } catch (IOException e) {
+                    LOGGER.error("Error accessing file '{}'.", fileName);
+                } catch (Exception e) {
+                    LOGGER.error("Error writing entry to {}.", fileName);
+                }
+            } else {
+                LOGGER.error("Skipped - PDF {} does not exist", fileName);
+            }
+        }
+    }
+
+    private boolean exportMatches(List<ParserResult> loaded) {
+        String[] data = cli.getExportMatches().split(",");
+        String searchTerm = data[0].replace("\\$", " "); // enables blanks within the search term:
+        // $ stands for a blank
+        ParserResult pr = loaded.get(loaded.size() - 1);
+        BibDatabaseContext databaseContext = pr.getDatabaseContext();
+        BibDatabase dataBase = pr.getDatabase();
+
+        SearchPreferences searchPreferences = preferencesService.getSearchPreferences();
+        SearchQuery query = new SearchQuery(searchTerm, searchPreferences.getSearchFlags());
         List<BibEntry> matches = new DatabaseSearcher(query, dataBase).getMatches();
 
-        //export matches
+        // export matches
         if (!matches.isEmpty()) {
             String formatName;
 
-            //read in the export format, take default format if no format entered
+            // read in the export format, take default format if no format entered
             switch (data.length) {
-            case 3:
-                formatName = data[2];
-                break;
-            case 2:
-                //default ExportFormat: HTML table (with Abstract & BibTeX)
-                formatName = "tablerefsabsbib";
-                break;
-            default:
-                System.err.println(Localization.lang("Output file missing").concat(". \n \t ")
-                        .concat(Localization.lang("Usage")).concat(": ") + JabRefCLI.getExportMatchesSyntax());
-                noGUINeeded = true;
-                return false;
+                case 3 -> formatName = data[2];
+                case 2 ->
+                        // default exporter: HTML table (with Abstract & BibTeX)
+                        formatName = "tablerefsabsbib";
+                default -> {
+                    System.err.println(Localization.lang("Output file missing").concat(". \n \t ")
+                                                   .concat(Localization.lang("Usage")).concat(": ") + JabRefCLI.getExportMatchesSyntax());
+                    noGUINeeded = true;
+                    return false;
+                }
             }
 
-            //export new database
-            IExportFormat format = ExportFormats.getExportFormat(formatName);
-            if (format == null) {
+            // export new database
+            Optional<Exporter> exporter = Globals.exportFactory.getExporterByName(formatName);
+            if (exporter.isEmpty()) {
                 System.err.println(Localization.lang("Unknown export format") + ": " + formatName);
             } else {
-                // We have an ExportFormat instance:
+                // We have an TemplateExporter instance:
                 try {
                     System.out.println(Localization.lang("Exporting") + ": " + data[1]);
-                    format.performExport(databaseContext, data[1],
-                            databaseContext.getMetaData().getEncoding().orElse(Globals.prefs.getDefaultEncoding()),
-                            matches);
+                    exporter.get().export(databaseContext, Path.of(data[1]), matches);
                 } catch (Exception ex) {
                     System.err.println(Localization.lang("Could not export file") + " '" + data[1] + "': "
                             + Throwables.getStackTraceAsString(ex));
@@ -307,9 +444,18 @@ public class ArgumentProcessor {
                 // BIB files to open. Other files, and files that could not be opened
                 // as bib, we try to import instead.
                 boolean bibExtension = aLeftOver.toLowerCase(Locale.ENGLISH).endsWith("bib");
+
                 ParserResult pr = new ParserResult();
                 if (bibExtension) {
-                    pr = OpenDatabase.loadDatabase(aLeftOver, Globals.prefs.getImportFormatPreferences());
+                    try {
+                        pr = OpenDatabase.loadDatabase(
+                                Path.of(aLeftOver),
+                                preferencesService.getImportFormatPreferences(),
+                                Globals.getFileUpdateMonitor());
+                    } catch (IOException ex) {
+                        pr = ParserResult.fromError(ex);
+                        LOGGER.error("Error opening file '{}'", aLeftOver, ex);
+                    }
                 }
 
                 if (!bibExtension || (pr.isEmpty())) {
@@ -342,6 +488,10 @@ public class ArgumentProcessor {
             importToOpenBase(cli.getImportToOpenBase()).ifPresent(loaded::add);
         }
 
+        if (!cli.isBlank() && cli.isBibtexImport()) {
+            importBibtexToOpenBase(cli.getBibtexImport(), preferencesService.getImportFormatPreferences()).ifPresent(loaded::add);
+        }
+
         return loaded;
     }
 
@@ -356,27 +506,7 @@ public class ArgumentProcessor {
             // write an output, if something could be resolved
             if ((newBase != null) && newBase.hasEntries()) {
                 String subName = StringUtil.getCorrectFileName(data[1], "bib");
-
-                try {
-                    System.out.println(Localization.lang("Saving") + ": " + subName);
-                    SavePreferences prefs = SavePreferences.loadForSaveFromPreferences(Globals.prefs);
-                    BibDatabaseWriter<SaveSession> databaseWriter = new BibtexDatabaseWriter<>(FileSaveSession::new);
-                    Defaults defaults = new Defaults(Globals.prefs.getDefaultBibDatabaseMode());
-                    SaveSession session = databaseWriter.saveDatabase(new BibDatabaseContext(newBase, defaults), prefs);
-
-                    // Show just a warning message if encoding did not work for all characters:
-                    if (!session.getWriter().couldEncodeAll()) {
-                        System.err.println(Localization.lang("Warning") + ": "
-                                + Localization.lang(
-                                        "The chosen encoding '%0' could not encode the following characters:",
-                                        session.getEncoding().displayName())
-                                + " " + session.getWriter().getProblemCharacters());
-                    }
-                    session.commit(subName);
-                } catch (SaveException ex) {
-                    System.err.println(Localization.lang("Could not save file.") + "\n" + ex.getLocalizedMessage());
-                }
-
+                saveDatabase(newBase, subName);
                 notSavedMsg = true;
             }
 
@@ -389,6 +519,32 @@ public class ArgumentProcessor {
         }
     }
 
+    private void saveDatabase(BibDatabase newBase, String subName) {
+        try {
+            System.out.println(Localization.lang("Saving") + ": " + subName);
+            GeneralPreferences generalPreferences = preferencesService.getGeneralPreferences();
+            SavePreferences savePreferences = preferencesService.getSavePreferences();
+            try (AtomicFileWriter fileWriter = new AtomicFileWriter(Path.of(subName), StandardCharsets.UTF_8)) {
+                BibWriter bibWriter = new BibWriter(fileWriter, OS.NEWLINE);
+
+                BibDatabaseWriter databaseWriter = new BibtexDatabaseWriter(
+                                                                            bibWriter,
+                                                                            generalPreferences,
+                                                                            savePreferences,
+                                                                            Globals.entryTypesManager);
+                databaseWriter.saveDatabase(new BibDatabaseContext(newBase));
+
+                // Show just a warning message if encoding did not work for all characters:
+                if (fileWriter.hasEncodingProblems()) {
+                    System.err.println(Localization.lang("Warning") + ": "
+                                       + Localization.lang("UTF-8 could not be used to encode the following characters: %0", fileWriter.getEncodingProblems()));
+                }
+            }
+        } catch (IOException ex) {
+            System.err.println(Localization.lang("Could not save file.") + "\n" + ex.getLocalizedMessage());
+        }
+    }
+
     private void exportFile(List<ParserResult> loaded, String[] data) {
         if (data.length == 1) {
             // This signals that the latest import should be stored in BibTeX
@@ -396,27 +552,7 @@ public class ArgumentProcessor {
             if (!loaded.isEmpty()) {
                 ParserResult pr = loaded.get(loaded.size() - 1);
                 if (!pr.isInvalid()) {
-                    try {
-                        System.out.println(Localization.lang("Saving") + ": " + data[0]);
-                        SavePreferences prefs = SavePreferences.loadForSaveFromPreferences(Globals.prefs);
-                        Defaults defaults = new Defaults(Globals.prefs.getDefaultBibDatabaseMode());
-                        BibDatabaseWriter<SaveSession> databaseWriter = new BibtexDatabaseWriter<>(
-                                FileSaveSession::new);
-                        SaveSession session = databaseWriter.saveDatabase(
-                                new BibDatabaseContext(pr.getDatabase(), pr.getMetaData(), defaults), prefs);
-
-                        // Show just a warning message if encoding did not work for all characters:
-                        if (!session.getWriter().couldEncodeAll()) {
-                            System.err.println(Localization.lang("Warning") + ": "
-                                    + Localization.lang(
-                                            "The chosen encoding '%0' could not encode the following characters:",
-                                            session.getEncoding().displayName())
-                                    + " " + session.getWriter().getProblemCharacters());
-                        }
-                        session.commit(data[0]);
-                    } catch (SaveException ex) {
-                        System.err.println(Localization.lang("Could not save file.") + "\n" + ex.getLocalizedMessage());
-                    }
+                    saveDatabase(pr.getDatabase(), data[0]);
                 }
             } else {
                 System.err.println(Localization.lang("The output option depends on a valid import option."));
@@ -429,46 +565,47 @@ public class ArgumentProcessor {
             // Set the global variable for this database's file directory before exporting,
             // so formatters can resolve linked files correctly.
             // (This is an ugly hack!)
-            File theFile = pr.getFile().get();
-            if (!theFile.isAbsolute()) {
-                theFile = theFile.getAbsoluteFile();
-            }
+            Path path = pr.getPath().get().toAbsolutePath();
             BibDatabaseContext databaseContext = pr.getDatabaseContext();
-            databaseContext.setDatabaseFile(theFile);
+            databaseContext.setDatabasePath(path);
             Globals.prefs.fileDirForDatabase = databaseContext
-                    .getFileDirectories(Globals.prefs.getFileDirectoryPreferences());
+                    .getFileDirectories(preferencesService.getFilePreferences());
             System.out.println(Localization.lang("Exporting") + ": " + data[0]);
-            IExportFormat format = ExportFormats.getExportFormat(data[1]);
-            if (format == null) {
+            Optional<Exporter> exporter = Globals.exportFactory.getExporterByName(data[1]);
+            if (exporter.isEmpty()) {
                 System.err.println(Localization.lang("Unknown export format") + ": " + data[1]);
             } else {
-                // We have an ExportFormat instance:
+                // We have an exporter:
                 try {
-                    format.performExport(pr.getDatabaseContext(), data[0],
-                            pr.getDatabaseContext().getMetaData().getEncoding()
-                                    .orElse(Globals.prefs.getDefaultEncoding()),
+                    exporter.get().export(pr.getDatabaseContext(), Path.of(data[0]),
                             pr.getDatabaseContext().getDatabase().getEntries());
                 } catch (Exception ex) {
-
                     System.err.println(Localization.lang("Could not export file") + " '" + data[0] + "': "
                             + Throwables.getStackTraceAsString(ex));
                 }
             }
-
         }
     }
 
     private void importPreferences() {
         try {
-            Globals.prefs.importPreferences(cli.getPreferencesImport());
-            EntryTypes.loadCustomEntryTypes(Globals.prefs.loadCustomEntryTypes(BibDatabaseMode.BIBTEX),
-                    Globals.prefs.loadCustomEntryTypes(BibDatabaseMode.BIBLATEX));
-            Map<String, ExportFormat> customFormats = Globals.prefs.customExports.getCustomExportFormats(Globals.prefs,
-                    Globals.journalAbbreviationLoader);
-            LayoutFormatterPreferences layoutPreferences = Globals.prefs
-                    .getLayoutFormatterPreferences(Globals.journalAbbreviationLoader);
-            SavePreferences savePreferences = SavePreferences.loadForExportFromPreferences(Globals.prefs);
-            ExportFormats.initAllExports(customFormats, layoutPreferences, savePreferences);
+            preferencesService.importPreferences(Path.of(cli.getPreferencesImport()));
+            Globals.entryTypesManager.addCustomOrModifiedTypes(preferencesService.getBibEntryTypes(BibDatabaseMode.BIBTEX),
+                    preferencesService.getBibEntryTypes(BibDatabaseMode.BIBLATEX));
+            List<TemplateExporter> customExporters =
+                    preferencesService.getCustomExportFormats(Globals.journalAbbreviationRepository);
+            LayoutFormatterPreferences layoutPreferences =
+                    preferencesService.getLayoutFormatterPreferences(Globals.journalAbbreviationRepository);
+            SavePreferences savePreferences = preferencesService.getSavePreferencesForExport();
+            XmpPreferences xmpPreferences = preferencesService.getXmpPreferences();
+            BibDatabaseMode bibDatabaseMode = preferencesService.getGeneralPreferences().getDefaultBibDatabaseMode();
+            Globals.exportFactory = ExporterFactory.create(
+                    customExporters,
+                    layoutPreferences,
+                    savePreferences,
+                    xmpPreferences,
+                    bibDatabaseMode,
+                    Globals.entryTypesManager);
         } catch (JabRefException ex) {
             LOGGER.error("Cannot import preferences", ex);
         }
@@ -478,7 +615,7 @@ public class ArgumentProcessor {
         if ("all".equals(value.trim())) {
             try {
                 System.out.println(Localization.lang("Setting all preferences to default values."));
-                Globals.prefs.clear();
+                preferencesService.clear();
                 new SharedDatabasePreferences().clear();
             } catch (BackingStoreException e) {
                 System.err.println(Localization.lang("Unable to clear preferences."));
@@ -487,11 +624,11 @@ public class ArgumentProcessor {
         } else {
             String[] keys = value.split(",");
             for (String key : keys) {
-                if (Globals.prefs.hasKey(key.trim())) {
+                try {
+                    preferencesService.deleteKey(key.trim());
                     System.out.println(Localization.lang("Resetting preference key '%0'", key.trim()));
-                    Globals.prefs.clear(key.trim());
-                } else {
-                    System.out.println(Localization.lang("Unknown preference key '%0'", key.trim()));
+                } catch (IllegalArgumentException e) {
+                    System.out.println(e.getMessage());
                 }
             }
         }
@@ -501,41 +638,37 @@ public class ArgumentProcessor {
         for (ParserResult parserResult : loaded) {
             BibDatabase database = parserResult.getDatabase();
             LOGGER.info(Localization.lang("Automatically setting file links"));
-            AutoSetLinks.autoSetLinks(database.getEntries(), parserResult.getDatabaseContext());
+            AutoSetFileLinksUtil util = new AutoSetFileLinksUtil(
+                    parserResult.getDatabaseContext(),
+                    preferencesService.getFilePreferences(),
+                    preferencesService.getAutoLinkPreferences());
+            util.linkAssociatedFiles(database.getEntries(), new NamedCompound(""));
         }
     }
 
-    private void regenerateBibtexKeys(List<ParserResult> loaded) {
+    private void regenerateCitationKeys(List<ParserResult> loaded) {
         for (ParserResult parserResult : loaded) {
             BibDatabase database = parserResult.getDatabase();
 
-            MetaData metaData = parserResult.getMetaData();
-            if (metaData != null) {
-                LOGGER.info(Localization.lang("Regenerating BibTeX keys according to metadata"));
-                for (BibEntry entry : database.getEntries()) {
-                    // try to make a new label
-                    BibtexKeyPatternUtil.makeAndSetLabel(
-                            metaData.getCiteKeyPattern(Globals.prefs.getBibtexKeyPatternPreferences().getKeyPattern()),
-                            database, entry, Globals.prefs.getBibtexKeyPatternPreferences());
-                }
-            } else {
-                LOGGER.info(Localization.lang("No meta data present in BIB_file. Cannot regenerate BibTeX keys"));
+            LOGGER.info(Localization.lang("Regenerating citation keys according to metadata"));
+
+            CitationKeyGenerator keyGenerator = new CitationKeyGenerator(
+                    parserResult.getDatabaseContext(),
+                    preferencesService.getCitationKeyPatternPreferences());
+            for (BibEntry entry : database.getEntries()) {
+                keyGenerator.generateAndSetKey(entry);
             }
         }
     }
 
     /**
      * Run an entry fetcher from the command line.
-     * <p>
-     * Note that this only works headlessly if the EntryFetcher does not show any GUI.
      *
-     * @param fetchCommand A string containing both the fetcher to use (id of EntryFetcherExtension minus Fetcher) and
-     *                     the search query, separated by a :
+     * @param fetchCommand A string containing both the name of the fetcher to use and the search query, separated by a :
      * @return A parser result containing the entries fetched or null if an error occurred.
      */
     private Optional<ParserResult> fetch(String fetchCommand) {
-
-        if ((fetchCommand == null) || !fetchCommand.contains(":") || (fetchCommand.split(":").length != 2)) {
+        if ((fetchCommand == null) || !fetchCommand.contains(":")) {
             System.out.println(Localization.lang("Expected syntax for --fetch='<name of fetcher>:<query>'"));
             System.out.println(Localization.lang("The following fetchers are available:"));
             return Optional.empty();
@@ -543,38 +676,38 @@ public class ArgumentProcessor {
 
         String[] split = fetchCommand.split(":");
         String engine = split[0];
-
-        EntryFetchers fetchers = new EntryFetchers(Globals.journalAbbreviationLoader);
-        EntryFetcher fetcher = null;
-        for (EntryFetcher e : fetchers.getEntryFetchers()) {
-            if (engine.equalsIgnoreCase(e.getClass().getSimpleName().replace("Fetcher", ""))) {
-                fetcher = e;
-            }
-        }
-
-        if (fetcher == null) {
-            System.out.println(Localization.lang("Could not find fetcher '%0'", engine));
-            System.out.println(Localization.lang("The following fetchers are available:"));
-
-            for (EntryFetcher e : fetchers.getEntryFetchers()) {
-                System.out.println(
-                        "  " + e.getClass().getSimpleName().replace("Fetcher", "").toLowerCase(Locale.ENGLISH));
-            }
-            return Optional.empty();
-        }
-
         String query = split[1];
-        System.out.println(Localization.lang("Running query '%0' with fetcher '%1'.", query, engine) + " "
-                + Localization.lang("Please wait..."));
-        Collection<BibEntry> result = new ImportInspectionCommandLine().query(query, fetcher);
 
-        if (result.isEmpty()) {
-            System.out.println(
-                    Localization.lang("Query '%0' with fetcher '%1' did not return any results.", query, engine));
+        Set<SearchBasedFetcher> fetchers = WebFetchers.getSearchBasedFetchers(
+                preferencesService.getImportFormatPreferences(),
+                preferencesService.getImporterPreferences());
+        Optional<SearchBasedFetcher> selectedFetcher = fetchers.stream()
+                                                               .filter(fetcher -> fetcher.getName().equalsIgnoreCase(engine))
+                                                               .findFirst();
+        if (selectedFetcher.isEmpty()) {
+            System.out.println(Localization.lang("Could not find fetcher '%0'", engine));
+
+            System.out.println(Localization.lang("The following fetchers are available:"));
+            fetchers.forEach(fetcher -> System.out.println("  " + fetcher.getName()));
+
             return Optional.empty();
+        } else {
+            System.out.println(Localization.lang("Running query '%0' with fetcher '%1'.", query, engine));
+            System.out.print(Localization.lang("Please wait..."));
+            try {
+                List<BibEntry> matches = selectedFetcher.get().performSearch(query);
+                if (matches.isEmpty()) {
+                    System.out.println("\r" + Localization.lang("No results found."));
+                    return Optional.empty();
+                } else {
+                    System.out.println("\r" + Localization.lang("Found %0 results.", String.valueOf(matches.size())));
+                    return Optional.of(new ParserResult(matches));
+                }
+            } catch (FetcherException e) {
+                LOGGER.error("Error while fetching", e);
+                return Optional.empty();
+            }
         }
-
-        return Optional.of(new ParserResult(result));
     }
 
     public boolean isBlank() {
@@ -588,5 +721,4 @@ public class ArgumentProcessor {
     public enum Mode {
         INITIAL_START, REMOTE_START
     }
-
 }
