@@ -2,25 +2,30 @@ package org.jabref.gui.desktop.os;
 
 import java.io.File;
 import java.io.IOException;
+import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.List;
 import java.util.Optional;
 
+import org.jabref.gui.DialogService;
+import org.jabref.gui.Globals;
 import org.jabref.gui.externalfiletype.ExternalFileType;
 import org.jabref.gui.externalfiletype.ExternalFileTypes;
-import org.jabref.preferences.JabRefPreferences;
 
-import static org.jabref.preferences.JabRefPreferences.ADOBE_ACROBAT_COMMAND;
-import static org.jabref.preferences.JabRefPreferences.SUMATRA_PDF_COMMAND;
-import static org.jabref.preferences.JabRefPreferences.USE_PDF_READER;
+import com.sun.jna.platform.win32.KnownFolders;
+import com.sun.jna.platform.win32.Shell32Util;
+import com.sun.jna.platform.win32.ShlObj;
+import com.sun.jna.platform.win32.Win32Exception;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 public class Windows implements NativeDesktop {
-    private static String DEFAULT_EXECUTABLE_EXTENSION = ".exe";
+    private static final Logger LOGGER = LoggerFactory.getLogger(Windows.class);
+
+    private static final String DEFAULT_EXECUTABLE_EXTENSION = ".exe";
 
     @Override
     public void openFile(String filePath, String fileType) throws IOException {
-        Optional<ExternalFileType> type = ExternalFileTypes.getInstance().getExternalFileTypeByExt(fileType);
+        Optional<ExternalFileType> type = ExternalFileTypes.getExternalFileTypeByExt(fileType, Globals.prefs.getFilePreferences());
 
         if (type.isPresent() && !type.get().getOpenWithApplication().isEmpty()) {
             openFileWithApplication(filePath, type.get().getOpenWithApplication());
@@ -34,13 +39,34 @@ public class Windows implements NativeDesktop {
     @Override
     public String detectProgramPath(String programName, String directoryName) {
         String progFiles = System.getenv("ProgramFiles(x86)");
-        if (progFiles == null) {
-            progFiles = System.getenv("ProgramFiles");
+        String programPath;
+        if (progFiles != null) {
+            programPath = getProgramPath(programName, directoryName, progFiles);
+            if (programPath != null) {
+                return programPath;
+            }
         }
+
+        progFiles = System.getenv("ProgramFiles");
+        programPath = getProgramPath(programName, directoryName, progFiles);
+        if (programPath != null) {
+            return programPath;
+        }
+
+        return "";
+    }
+
+    private String getProgramPath(String programName, String directoryName, String progFiles) {
+        Path programPath;
         if ((directoryName != null) && !directoryName.isEmpty()) {
-            return Paths.get(progFiles, directoryName, programName + DEFAULT_EXECUTABLE_EXTENSION).toString();
+            programPath = Path.of(progFiles, directoryName, programName + DEFAULT_EXECUTABLE_EXTENSION);
+        } else {
+            programPath = Path.of(progFiles, programName + DEFAULT_EXECUTABLE_EXTENSION);
         }
-        return Paths.get(progFiles, programName + DEFAULT_EXECUTABLE_EXTENSION).toString();
+        if (Files.exists(programPath)) {
+            return programPath.toString();
+        }
+        return null;
     }
 
     @Override
@@ -48,14 +74,29 @@ public class Windows implements NativeDesktop {
         String programDir = System.getenv("ProgramFiles");
 
         if (programDir != null) {
-            return Paths.get(programDir);
+            return Path.of(programDir);
         }
         return getUserDirectory();
     }
 
     @Override
+    public Path getDefaultFileChooserDirectory() {
+        try {
+            try {
+                return Path.of(Shell32Util.getKnownFolderPath(KnownFolders.FOLDERID_Documents));
+            } catch (UnsatisfiedLinkError e) {
+                // Windows Vista or earlier
+                return Path.of(Shell32Util.getFolderPath(ShlObj.CSIDL_MYDOCUMENTS));
+            }
+        } catch (Win32Exception e) {
+            LOGGER.error("Error accessing folder", e);
+            return Path.of(System.getProperty("user.home"));
+        }
+    }
+
+    @Override
     public void openFileWithApplication(String filePath, String application) throws IOException {
-        new ProcessBuilder(Paths.get(application).toString(), Paths.get(filePath).toString()).start();
+        new ProcessBuilder(Path.of(application).toString(), Path.of(filePath).toString()).start();
     }
 
     @Override
@@ -64,25 +105,9 @@ public class Windows implements NativeDesktop {
     }
 
     @Override
-    public void openConsole(String absolutePath) throws IOException {
+    public void openConsole(String absolutePath, DialogService dialogService) throws IOException {
         ProcessBuilder process = new ProcessBuilder("cmd.exe", "/c", "start");
         process.directory(new File(absolutePath));
         process.start();
-    }
-
-    @Override
-    public void openPdfWithParameters(String filePath, List<String> parameters) throws IOException {
-        String pdfReaderPath = JabRefPreferences.getInstance().get(USE_PDF_READER);
-        if (pdfReaderPath.equals(SUMATRA_PDF_COMMAND) || pdfReaderPath.equals(ADOBE_ACROBAT_COMMAND)) {
-            String[] command = new String[parameters.size() + 2];
-            command[0] = "\"" + Paths.get(pdfReaderPath).toString() + "\"";
-            for (int i = 1; i < command.length - 1; i++) {
-                command[i] = "\"" + parameters.get(i - 1) + "\"";
-            }
-            command[command.length - 1] = "\"" + filePath + "\"";
-            new ProcessBuilder(command).start();
-        } else {
-            openFile(filePath, "PDF");
-        }
     }
 }
