@@ -2,17 +2,15 @@ package org.jabref.gui.util;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.Collection;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import javafx.stage.FileChooser;
 
-import org.jabref.logic.util.FileExtensions;
+import org.jabref.logic.util.FileType;
 
 public class FileDialogConfiguration {
 
@@ -20,9 +18,10 @@ public class FileDialogConfiguration {
     private final Path initialDirectory;
     private final FileChooser.ExtensionFilter defaultExtension;
     private final String initialFileName;
+    private FileChooser.ExtensionFilter selectedExtensionFilter;
 
     private FileDialogConfiguration(Path initialDirectory, List<FileChooser.ExtensionFilter> extensionFilters,
-            FileChooser.ExtensionFilter defaultExtension, String initialFileName) {
+                                    FileChooser.ExtensionFilter defaultExtension, String initialFileName) {
         this.initialDirectory = initialDirectory;
         this.extensionFilters = Objects.requireNonNull(extensionFilters);
         this.defaultExtension = defaultExtension;
@@ -45,42 +44,35 @@ public class FileDialogConfiguration {
         return extensionFilters;
     }
 
+    public FileChooser.ExtensionFilter getSelectedExtensionFilter() {
+        return selectedExtensionFilter;
+    }
+
+    public void setSelectedExtensionFilter(FileChooser.ExtensionFilter selectedExtensionFilter) {
+        this.selectedExtensionFilter = selectedExtensionFilter;
+    }
+
     public static class Builder {
 
-        private final List<FileChooser.ExtensionFilter> extensionFilter = new ArrayList<>();
+        private final List<FileChooser.ExtensionFilter> extensionFilters = new ArrayList<>();
         private Path initialDirectory;
         private FileChooser.ExtensionFilter defaultExtension;
         private String initialFileName;
 
-        public Builder addExtensionFilter(FileExtensions extension) {
-            extensionFilter.add(toFilter(extension));
-            return this;
-        }
-
-        private FileChooser.ExtensionFilter toFilter(FileExtensions extension) {
-            return new FileChooser.ExtensionFilter(extension.getDescription(),
-                    extension.getExtensionsAsList().stream().map(ending -> "*." + ending).collect(Collectors.toList()));
-        }
-
-        public Builder addExtensionFilters(Collection<FileExtensions> extensions) {
-            extensions.forEach(this::addExtensionFilter);
-            return this;
-        }
-
         public FileDialogConfiguration build() {
-            return new FileDialogConfiguration(initialDirectory, extensionFilter, defaultExtension, initialFileName);
+            return new FileDialogConfiguration(initialDirectory, extensionFilters, defaultExtension, initialFileName);
         }
 
         public Builder withInitialDirectory(Path directory) {
-            if (directory == null) { //It could be that somehow the path is null, for example if it got deleted in the meantime
+            if (directory == null) { // It could be that somehow the path is null, for example if it got deleted in the meantime
                 initialDirectory = null;
-            } else { //Dir must be a folder, not a file
+            } else { // Dir must be a folder, not a file
                 if (!Files.isDirectory(directory)) {
                     directory = directory.getParent();
                 }
-                //The lines above work also if the dir does not exist at all!
-                //NULL is accepted by the filechooser as no inital path
-                //Explicit null check, if somehow the parent is null, as Files.exists throws an NPE otherwise
+                // The lines above work also if the dir does not exist at all!
+                // NULL is accepted by the filechooser as no inital path
+                // Explicit null check, if somehow the parent is null, as Files.exists throws an NPE otherwise
                 if ((directory != null) && !Files.exists(directory)) {
                     directory = null;
                 }
@@ -91,23 +83,62 @@ public class FileDialogConfiguration {
 
         public Builder withInitialDirectory(String directory) {
             if (directory != null) {
-                withInitialDirectory(Paths.get(directory));
+                withInitialDirectory(Path.of(directory));
             } else {
                 initialDirectory = null;
             }
             return this;
         }
 
-        public Builder withDefaultExtension(FileExtensions extension) {
-            defaultExtension = toFilter(extension);
-            return this;
-        }
-
         public Builder withInitialFileName(String initialFileName) {
             this.initialFileName = initialFileName;
             return this;
-
         }
 
+        public Builder withDefaultExtension(FileChooser.ExtensionFilter extensionFilter) {
+            defaultExtension = extensionFilter;
+            return this;
+        }
+
+        public Builder withDefaultExtension(FileType fileType) {
+            defaultExtension = FileFilterConverter.toExtensionFilter(fileType);
+            return this;
+        }
+
+        public Builder withDefaultExtension(String description, FileType fileType) {
+            defaultExtension = FileFilterConverter.toExtensionFilter(description, fileType);
+            return this;
+        }
+
+        public Builder withDefaultExtension(String fileTypeDescription) {
+            extensionFilters.stream()
+                            .filter(type -> type.getDescription().equalsIgnoreCase(fileTypeDescription))
+                            .findFirst()
+                            .ifPresent(extensionFilter -> defaultExtension = extensionFilter);
+
+            return this;
+        }
+
+        public Builder addExtensionFilter(FileChooser.ExtensionFilter filter) {
+            extensionFilters.add(filter);
+            return this;
+        }
+
+        public Builder addExtensionFilter(List<FileChooser.ExtensionFilter> filters) {
+            extensionFilters.addAll(filters);
+            return this;
+        }
+
+        public Builder addExtensionFilter(FileType... fileTypes) {
+            Stream.of(fileTypes)
+                  .map(FileFilterConverter::toExtensionFilter)
+                  .forEachOrdered(this::addExtensionFilter);
+            return this;
+        }
+
+        public Builder addExtensionFilter(String description, FileType fileType) {
+            extensionFilters.add(FileFilterConverter.toExtensionFilter(description, fileType));
+            return this;
+        }
     }
 }
