@@ -2,36 +2,33 @@ package org.jabref.logic.util.io;
 
 import java.io.File;
 import java.io.IOException;
+import java.io.UncheckedIOException;
+import java.nio.file.FileVisitOption;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.nio.file.attribute.BasicFileAttributes;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
+import java.util.function.BiPredicate;
+import java.util.function.Function;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+import java.util.regex.PatternSyntaxException;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
-import org.jabref.logic.bibtexkeypattern.BibtexKeyPatternUtil;
-import org.jabref.model.database.BibDatabase;
+import org.jabref.logic.citationkeypattern.BracketedPattern;
 import org.jabref.model.entry.BibEntry;
 import org.jabref.model.strings.StringUtil;
 
-import org.apache.commons.logging.Log;
-import org.apache.commons.logging.LogFactory;
-
 class RegExpBasedFileFinder implements FileFinder {
-    private static final Log LOGGER = LogFactory.getLog(RegExpBasedFileFinder.class);
 
     private static final String EXT_MARKER = "__EXTENSION__";
 
     private static final Pattern ESCAPE_PATTERN = Pattern.compile("([^\\\\])\\\\([^\\\\])");
 
-    private static final Pattern SQUARE_BRACKETS_PATTERN = Pattern.compile("\\[.*?\\]");
-    private String regExp;
-    private Character keywordDelimiter;
+    private final String regExp;
+    private final Character keywordDelimiter;
 
     /**
      * @param regExp The expression deciding which names are acceptable.
@@ -42,91 +39,54 @@ class RegExpBasedFileFinder implements FileFinder {
     }
 
     /**
-     * Takes a string that contains bracketed expression and expands each of these using getFieldAndFormat.
-     * <p>
-     * Unknown Bracket expressions are silently dropped.
+     * Creates a Pattern that matches the file name corresponding to the last element of {@code fileParts} with any bracketed patterns expanded.
      *
-     * @param bracketString
-     * @param entry
-     * @param database
-     * @param keywordDelimiter
-     * @return
+     * @throws IOException throws an IOException if a PatternSyntaxException occurs
      */
-    public static String expandBrackets(String bracketString, BibEntry entry, BibDatabase database,
-                                        Character keywordDelimiter) {
-        Matcher m = SQUARE_BRACKETS_PATTERN.matcher(bracketString);
-        StringBuffer s = new StringBuffer();
-        while (m.find()) {
-            String replacement = getFieldAndFormat(m.group(), entry, database, keywordDelimiter);
-            m.appendReplacement(s, replacement);
-        }
-        m.appendTail(s);
+    private Pattern createFileNamePattern(String[] fileParts, String extensionRegExp, BibEntry entry) throws IOException {
+        // Protect the extension marker so that it isn't treated as a bracketed pattern
+        String filePart = fileParts[fileParts.length - 1].replace("[extension]", EXT_MARKER);
 
-        return s.toString();
+        // We need to supply a custom function to deal with the content of a bracketed expression and expandBracketContent is the default function
+        Function<String, String> expandBracket = BracketedPattern.expandBracketContent(keywordDelimiter, entry, null);
+        // but, we want to post-process the expanded content so that it can be used as a regex for finding a file name
+        Function<String, String> bracketToFileNameRegex = expandBracket.andThen(RegExpBasedFileFinder::toFileNameRegex);
+
+        String expandedBracketAsFileNameRegex = BracketedPattern.expandBrackets(filePart, bracketToFileNameRegex);
+
+        String fileNamePattern = expandedBracketAsFileNameRegex
+                .replaceAll(EXT_MARKER, extensionRegExp) // Replace the extension marker
+                .replaceAll("\\\\\\\\", "\\\\");
+        try {
+            return Pattern.compile('^' + fileNamePattern + '$', Pattern.CASE_INSENSITIVE);
+        } catch (PatternSyntaxException e) {
+            throw new IOException(String.format("There is a syntax error in the regular expression %s used to search for files", fileNamePattern), e);
+        }
     }
 
     /**
-     * Accepts a string like [author:lower] or [title:abbr] or [auth], whereas the first part signifies the bibtex-field
-     * to get, or the key generator field marker to use, while the others are the modifiers that will be applied.
+     * Helper method for both exact matching (if the file name were not created by JabRef) and cleaned file name matching.
+     *
+     * @param expandedContent the expanded content of a bracketed expression
+     * @return a String representation of a regex matching the expanded content and the expanded content cleaned for file name use
      */
-    public static String getFieldAndFormat(String fieldAndFormat, BibEntry entry, BibDatabase database,
-                                           Character keywordDelimiter) {
-
-        String strippedFieldAndFormat = StringUtil.stripBrackets(fieldAndFormat);
-
-        int colon = strippedFieldAndFormat.indexOf(':');
-
-        String beforeColon;
-        String afterColon;
-        if (colon == -1) {
-            beforeColon = strippedFieldAndFormat;
-            afterColon = null;
-        } else {
-            beforeColon = strippedFieldAndFormat.substring(0, colon);
-            afterColon = strippedFieldAndFormat.substring(colon + 1);
-        }
-        beforeColon = beforeColon.trim();
-
-        if (beforeColon.isEmpty()) {
-            return "";
-        }
-
-        // If no field value was found, try to interpret it as a key generator field marker:
-        String fieldValue = entry.getResolvedFieldOrAlias(beforeColon, database)
-                .orElse(BibtexKeyPatternUtil.makeLabel(entry, beforeColon, keywordDelimiter, database));
-
-        if (fieldValue == null) {
-            return "";
-        }
-
-        if ((afterColon == null) || afterColon.isEmpty()) {
-            return fieldValue;
-        }
-
-        List<String> parts = Arrays.asList(afterColon.split(":"));
-        fieldValue = BibtexKeyPatternUtil.applyModifiers(fieldValue, parts, 0);
-
-        return fieldValue;
-    }
-
-    @Override
-    public Map<BibEntry, List<Path>> findAssociatedFiles(List<BibEntry> entries, List<Path> directories, List<String> extensions) {
-        Map<BibEntry, List<Path>> res = new HashMap<>();
-        for (BibEntry entry : entries) {
-            res.put(entry, findFiles(entry, extensions, directories));
-        }
-        return res;
+    private static String toFileNameRegex(String expandedContent) {
+        var cleanedContent = FileNameCleaner.cleanFileName(expandedContent);
+        return expandedContent.equals(cleanedContent) ? Pattern.quote(expandedContent) :
+                "(" + Pattern.quote(expandedContent) + ")|(" + Pattern.quote(cleanedContent) + ")";
     }
 
     /**
      * Method for searching for files using regexp. A list of extensions and directories can be
      * given.
-     * @param entry The entry to search for.
-     * @param extensions The extensions that are acceptable.
+     *
+     * @param entry       The entry to search for.
+     * @param extensions  The extensions that are acceptable.
      * @param directories The root directories to search.
      * @return A list of files paths matching the given criteria.
      */
-    private List<Path> findFiles(BibEntry entry, List<String> extensions, List<Path> directories) {
+    @Override
+    public List<Path> findAssociatedFiles(BibEntry entry, List<Path> directories, List<String> extensions) throws IOException {
         String extensionRegExp = '(' + String.join("|", extensions) + ')';
         return findFile(entry, directories, extensionRegExp);
     }
@@ -140,10 +100,10 @@ class RegExpBasedFileFinder implements FileFinder {
      * http://sourceforge.net/tracker/index.php?func=detail&aid=1503410&group_id=92314&atid=600309
      *
      * Requirements:
-     *  - Be able to find the associated PDF in a set of given directories.
-     *  - Be able to return a relative path or absolute path.
-     *  - Be fast.
-     *  - Allow for flexible naming schemes in the PDFs.
+     * - Be able to find the associated PDF in a set of given directories.
+     * - Be able to return a relative path or absolute path.
+     * - Be fast.
+     * - Allow for flexible naming schemes in the PDFs.
      *
      * Syntax scheme for file:
      * <ul>
@@ -153,18 +113,15 @@ class RegExpBasedFileFinder implements FileFinder {
      * <li>.* Anything else is taken to be a Regular expression.</li>
      * </ul>
      *
-     * @param entry
-     *            non-null
-     * @param dirs
-     *            A set of root directories to start the search from. Paths are
-     *            returned relative to these directories if relative is set to
-     *            true. These directories will not be expanded or anything. Use
-     *            the file attribute for this.
-     *
+     * @param entry non-null
+     * @param dirs  A set of root directories to start the search from. Paths are
+     *              returned relative to these directories if relative is set to
+     *              true. These directories will not be expanded or anything. Use
+     *              the file attribute for this.
      * @return Will return the first file found to match the given criteria or
-     *         null if none was found.
+     * null if none was found.
      */
-    private List<Path> findFile(BibEntry entry, List<Path> dirs, String extensionRegExp) {
+    private List<Path> findFile(BibEntry entry, List<Path> dirs, String extensionRegExp) throws IOException {
         List<Path> res = new ArrayList<>();
         for (Path directory : dirs) {
             res.addAll(findFile(entry, directory, regExp, extensionRegExp));
@@ -176,13 +133,13 @@ class RegExpBasedFileFinder implements FileFinder {
      * The actual work-horse. Will find absolute filepaths starting from the
      * given directory using the given regular expression string for search.
      */
-    private List<Path> findFile(BibEntry entry, Path directory, String file, String extensionRegExp) {
-        List<Path> res = new ArrayList<>();
+    private List<Path> findFile(final BibEntry entry, final Path directory, final String file, final String extensionRegExp) throws IOException {
+        List<Path> resultFiles = new ArrayList<>();
 
         String fileName = file;
         Path actualDirectory;
         if (fileName.startsWith("/")) {
-            actualDirectory = Paths.get(".");
+            actualDirectory = Path.of(".");
             fileName = fileName.substring(1);
         } else {
             actualDirectory = directory;
@@ -190,7 +147,7 @@ class RegExpBasedFileFinder implements FileFinder {
 
         // Escape handling...
         Matcher m = ESCAPE_PATTERN.matcher(fileName);
-        StringBuffer s = new StringBuffer();
+        StringBuilder s = new StringBuilder();
         while (m.find()) {
             m.appendReplacement(s, m.group(1) + '/' + m.group(2));
         }
@@ -199,16 +156,14 @@ class RegExpBasedFileFinder implements FileFinder {
         String[] fileParts = fileName.split("/");
 
         if (fileParts.length == 0) {
-            return res;
+            return resultFiles;
         }
 
-        for (int i = 0; i < (fileParts.length - 1); i++) {
-
-            String dirToProcess = fileParts[i];
-            dirToProcess = expandBrackets(dirToProcess, entry, null, keywordDelimiter);
+        for (int index = 0; index < (fileParts.length - 1); index++) {
+            String dirToProcess = fileParts[index];
 
             if (dirToProcess.matches("^.:$")) { // Windows Drive Letter
-                actualDirectory = Paths.get(dirToProcess + '/');
+                actualDirectory = Path.of(dirToProcess + '/');
                 continue;
             }
             if (".".equals(dirToProcess)) { // Stay in current directory
@@ -221,45 +176,43 @@ class RegExpBasedFileFinder implements FileFinder {
             if ("*".equals(dirToProcess)) { // Do for all direct subdirs
                 File[] subDirs = actualDirectory.toFile().listFiles();
                 if (subDirs != null) {
-                    String restOfFileString = StringUtil.join(fileParts, "/", i + 1, fileParts.length);
+                    String restOfFileString = StringUtil.join(fileParts, "/", index + 1, fileParts.length);
                     for (File subDir : subDirs) {
                         if (subDir.isDirectory()) {
-                            res.addAll(findFile(entry, subDir.toPath(), restOfFileString, extensionRegExp));
+                            resultFiles.addAll(findFile(entry, subDir.toPath(), restOfFileString, extensionRegExp));
                         }
                     }
                 }
             }
             // Do for all direct and indirect subdirs
             if ("**".equals(dirToProcess)) {
-                String restOfFileString = StringUtil.join(fileParts, "/", i + 1, fileParts.length);
+                String restOfFileString = StringUtil.join(fileParts, "/", index + 1, fileParts.length);
 
-                try {
-                    Path finalActualDirectory = actualDirectory;
-                    Files.walk(actualDirectory).forEach(subElement -> {
-                        // We only want to transverse directory (and not the current one; this is already done below)
-                        if (!finalActualDirectory.equals(subElement) && Files.isDirectory(subElement)) {
-                            res.addAll(findFile(entry, subElement, restOfFileString, extensionRegExp));
-                        }
-                    });
-                } catch (IOException e) {
-                    LOGGER.debug(e);
+                final Path rootDirectory = actualDirectory;
+                try (Stream<Path> pathStream = Files.walk(actualDirectory)) {
+                    // We only want to transverse directory (and not the current one; this is already done below)
+                    for (Path path : pathStream.filter(element -> isSubDirectory(rootDirectory, element)).collect(Collectors.toList())) {
+                        resultFiles.addAll(findFile(entry, path, restOfFileString, extensionRegExp));
+                    }
+                } catch (UncheckedIOException ioe) {
+                    throw ioe.getCause();
                 }
             } // End process directory information
         }
 
         // Last step: check if the given file can be found in this directory
-        String filePart = fileParts[fileParts.length - 1].replace("[extension]", EXT_MARKER);
-        String filenameToLookFor = expandBrackets(filePart, entry, null, keywordDelimiter).replaceAll(EXT_MARKER, extensionRegExp);
-        final Pattern toMatch = Pattern.compile('^' + filenameToLookFor.replaceAll("\\\\\\\\", "\\\\") + '$',
-                Pattern.CASE_INSENSITIVE);
-        try {
-            List<Path> matches = Files.find(actualDirectory, 1,
-                    (path, attributes) -> toMatch.matcher(path.getFileName().toString()).matches())
-                    .collect(Collectors.toList());
-            res.addAll(matches);
-        } catch (IOException e) {
-            LOGGER.debug(e);
+        Pattern toMatch = createFileNamePattern(fileParts, extensionRegExp, entry);
+        BiPredicate<Path, BasicFileAttributes> matcher = (path, attributes) -> toMatch.matcher(path.getFileName().toString()).matches();
+        try (Stream<Path> pathStream = Files.find(actualDirectory, 1, matcher, FileVisitOption.FOLLOW_LINKS)) {
+            resultFiles.addAll(pathStream.collect(Collectors.toList()));
+        } catch (UncheckedIOException uncheckedIOException) {
+            // Previously, an empty list were returned here on both IOException and UncheckedIOException
+            throw uncheckedIOException.getCause();
         }
-        return res;
+        return resultFiles;
+    }
+
+    private boolean isSubDirectory(Path rootDirectory, Path path) {
+        return !rootDirectory.equals(path) && Files.isDirectory(path);
     }
 }
