@@ -1,123 +1,122 @@
 package org.jabref.logic.importer;
 
-import java.io.File;
 import java.io.IOException;
 import java.net.URISyntaxException;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.Collection;
 import java.util.Optional;
 
 import org.jabref.model.database.BibDatabase;
 import org.jabref.model.entry.BibEntry;
+import org.jabref.model.entry.field.StandardField;
+import org.jabref.model.util.DummyFileUpdateMonitor;
+import org.jabref.model.util.FileUpdateMonitor;
+import org.jabref.preferences.GeneralPreferences;
 
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.mockito.Answers;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
 
-public class OpenDatabaseTest {
+class OpenDatabaseTest {
 
     private final Charset defaultEncoding = StandardCharsets.UTF_8;
+    private GeneralPreferences generalPreferences;
     private ImportFormatPreferences importFormatPreferences;
-    private final File bibNoHeader;
-    private final File bibWrongHeader;
-    private final File bibHeader;
-    private final File bibHeaderAndSignature;
-    private final File bibEncodingWithoutNewline;
+    private final Path bibNoHeader;
+    private final Path bibWrongHeader;
+    private final Path bibHeader;
+    private final Path bibHeaderAndSignature;
+    private final Path bibEncodingWithoutNewline;
+    private final FileUpdateMonitor fileMonitor = new DummyFileUpdateMonitor();
 
-
-    public OpenDatabaseTest() throws URISyntaxException {
-        bibNoHeader = Paths.get(OpenDatabaseTest.class.getResource("headerless.bib").toURI()).toFile();
-        bibWrongHeader = Paths.get(OpenDatabaseTest.class.getResource("wrong-header.bib").toURI()).toFile();
-        bibHeader = Paths.get(OpenDatabaseTest.class.getResource("encoding-header.bib").toURI()).toFile();
-        bibHeaderAndSignature = Paths.get(OpenDatabaseTest.class.getResource("jabref-header.bib").toURI())
-                .toFile();
-        bibEncodingWithoutNewline = Paths
-                .get(OpenDatabaseTest.class.getResource("encodingWithoutNewline.bib").toURI()).toFile();
+    OpenDatabaseTest() throws URISyntaxException {
+        bibNoHeader = Path.of(OpenDatabaseTest.class.getResource("headerless.bib").toURI());
+        bibWrongHeader = Path.of(OpenDatabaseTest.class.getResource("wrong-header.bib").toURI());
+        bibHeader = Path.of(OpenDatabaseTest.class.getResource("encoding-header.bib").toURI());
+        bibHeaderAndSignature = Path.of(OpenDatabaseTest.class.getResource("jabref-header.bib").toURI());
+        bibEncodingWithoutNewline = Path.of(OpenDatabaseTest.class.getResource("encodingWithoutNewline.bib").toURI());
     }
 
-    @Before
-    public void setUp() {
+    @BeforeEach
+    void setUp() {
+        generalPreferences = mock(GeneralPreferences.class, Answers.RETURNS_DEEP_STUBS);
         importFormatPreferences = mock(ImportFormatPreferences.class, Answers.RETURNS_DEEP_STUBS);
-        when(importFormatPreferences.getEncoding()).thenReturn(StandardCharsets.UTF_8);
     }
 
     @Test
-    public void useFallbackEncodingIfNoHeader() throws IOException {
-        ParserResult result = OpenDatabase.loadDatabase(bibNoHeader, importFormatPreferences);
-        Assert.assertEquals(defaultEncoding, result.getMetaData().getEncoding().get());
+    void useFallbackEncodingIfNoHeader() throws IOException {
+        ParserResult result = OpenDatabase.loadDatabase(bibNoHeader, importFormatPreferences, fileMonitor);
+        assertEquals(defaultEncoding, result.getMetaData().getEncoding().get());
     }
 
     @Test
-    public void useFallbackEncodingIfUnknownHeader() throws IOException {
-        ParserResult result = OpenDatabase.loadDatabase(bibWrongHeader, importFormatPreferences);
-        Assert.assertEquals(defaultEncoding, result.getMetaData().getEncoding().get());
+    void useFallbackEncodingIfUnknownHeader() throws IOException {
+        ParserResult result = OpenDatabase.loadDatabase(bibWrongHeader, importFormatPreferences, fileMonitor);
+        assertEquals(defaultEncoding, result.getMetaData().getEncoding().get());
     }
 
     @Test
-    public void useSpecifiedEncoding() throws IOException {
-        ParserResult result = OpenDatabase.loadDatabase(bibHeader,
-                importFormatPreferences.withEncoding(StandardCharsets.US_ASCII));
-        Assert.assertEquals(defaultEncoding, result.getMetaData().getEncoding().get());
+    void useSpecifiedEncoding() throws IOException {
+        ParserResult result = OpenDatabase.loadDatabase(bibHeader, importFormatPreferences, fileMonitor);
+        assertEquals(defaultEncoding, result.getMetaData().getEncoding().get());
     }
 
     @Test
-    public void useSpecifiedEncodingWithSignature() throws IOException {
-        ParserResult result = OpenDatabase.loadDatabase(bibHeaderAndSignature,
-                importFormatPreferences.withEncoding(StandardCharsets.US_ASCII));
-        Assert.assertEquals(defaultEncoding, result.getMetaData().getEncoding().get());
+    void useSpecifiedEncodingWithSignature() throws IOException {
+        ParserResult result = OpenDatabase.loadDatabase(bibHeaderAndSignature, importFormatPreferences, fileMonitor);
+        assertEquals(defaultEncoding, result.getMetaData().getEncoding().get());
     }
 
     @Test
-    public void entriesAreParsedNoHeader() throws IOException {
-        ParserResult result = OpenDatabase.loadDatabase(bibNoHeader, importFormatPreferences);
+    void entriesAreParsedNoHeader() throws IOException {
+        ParserResult result = OpenDatabase.loadDatabase(bibNoHeader, importFormatPreferences, fileMonitor);
         BibDatabase db = result.getDatabase();
 
         // Entry
-        Assert.assertEquals(1, db.getEntryCount());
-        Assert.assertEquals(Optional.of("2014"), db.getEntryByKey("1").get().getField("year"));
+        assertEquals(1, db.getEntryCount());
+        assertEquals(Optional.of("2014"), db.getEntryByCitationKey("1").get().getField(StandardField.YEAR));
     }
 
     @Test
-    public void entriesAreParsedHeader() throws IOException {
-        ParserResult result = OpenDatabase.loadDatabase(bibHeader, importFormatPreferences);
+    void entriesAreParsedHeader() throws IOException {
+        ParserResult result = OpenDatabase.loadDatabase(bibHeader, importFormatPreferences, fileMonitor);
         BibDatabase db = result.getDatabase();
 
         // Entry
-        Assert.assertEquals(1, db.getEntryCount());
-        Assert.assertEquals(Optional.of("2014"), db.getEntryByKey("1").get().getField("year"));
+        assertEquals(1, db.getEntryCount());
+        assertEquals(Optional.of("2014"), db.getEntryByCitationKey("1").get().getField(StandardField.YEAR));
     }
 
     @Test
-    public void entriesAreParsedHeaderAndSignature() throws IOException {
-        ParserResult result = OpenDatabase.loadDatabase(bibHeaderAndSignature, importFormatPreferences);
+    void entriesAreParsedHeaderAndSignature() throws IOException {
+        ParserResult result = OpenDatabase.loadDatabase(bibHeaderAndSignature, importFormatPreferences, fileMonitor);
         BibDatabase db = result.getDatabase();
 
         // Entry
-        Assert.assertEquals(1, db.getEntryCount());
-        Assert.assertEquals(Optional.of("2014"), db.getEntryByKey("1").get().getField("year"));
+        assertEquals(1, db.getEntryCount());
+        assertEquals(Optional.of("2014"), db.getEntryByCitationKey("1").get().getField(StandardField.YEAR));
     }
 
     /**
      * Test for #669
      */
     @Test
-    public void correctlyParseEncodingWithoutNewline() throws IOException {
-        ParserResult result = OpenDatabase.loadDatabase(bibEncodingWithoutNewline, importFormatPreferences);
-        Assert.assertEquals(StandardCharsets.US_ASCII, result.getMetaData().getEncoding().get());
+    void correctlyParseEncodingWithoutNewline() throws IOException {
+        ParserResult result = OpenDatabase.loadDatabase(bibEncodingWithoutNewline, importFormatPreferences, fileMonitor);
+        assertEquals(StandardCharsets.US_ASCII, result.getMetaData().getEncoding().get());
 
         BibDatabase db = result.getDatabase();
-        Assert.assertEquals(Optional.of("testPreamble"), db.getPreamble());
+        assertEquals(Optional.of("testPreamble"), db.getPreamble());
 
         Collection<BibEntry> entries = db.getEntries();
-        Assert.assertEquals(1, entries.size());
+        assertEquals(1, entries.size());
 
         BibEntry entry = entries.iterator().next();
-        Assert.assertEquals(Optional.of("testArticle"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("testArticle"), entry.getCitationKey());
     }
 }
