@@ -1,6 +1,6 @@
 package org.jabref.logic.pdf;
 
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.time.LocalDateTime;
 import java.util.Collections;
 import java.util.Optional;
@@ -8,9 +8,9 @@ import java.util.Optional;
 import org.jabref.model.pdf.FileAnnotation;
 import org.jabref.model.pdf.FileAnnotationType;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class PdfAnnotationImporterTest {
 
@@ -18,37 +18,37 @@ public class PdfAnnotationImporterTest {
 
     @Test
     public void invalidPath() {
-        assertEquals(Collections.emptyList(), importer.importAnnotations(Paths.get("/asdf/does/not/exist.pdf")));
+        assertEquals(Collections.emptyList(), importer.importAnnotations(Path.of("/asdf/does/not/exist.pdf")));
     }
 
     @Test
     public void invalidDirectory() {
-        assertEquals(Collections.emptyList(), importer.importAnnotations(Paths.get("src/test/resources/pdfs")));
+        assertEquals(Collections.emptyList(), importer.importAnnotations(Path.of("src/test/resources/pdfs")));
     }
 
     @Test
     public void invalidDocumentType() {
-        assertEquals(Collections.emptyList(), importer.importAnnotations(Paths.get("src/test/resources/pdfs/write-protected.docx")));
+        assertEquals(Collections.emptyList(), importer.importAnnotations(Path.of("src/test/resources/pdfs/write-protected.docx")));
     }
 
     @Test
     public void noAnnotationsWriteProtected() {
-        assertEquals(Collections.emptyList(), importer.importAnnotations(Paths.get("src/test/resources/pdfs/write-protected.pdf")));
+        assertEquals(Collections.emptyList(), importer.importAnnotations(Path.of("src/test/resources/pdfs/write-protected.pdf")));
     }
 
     @Test
     public void noAnnotationsEncrypted() {
-        assertEquals(Collections.emptyList(), importer.importAnnotations(Paths.get("src/test/resources/pdfs/encrypted.pdf")));
+        assertEquals(Collections.emptyList(), importer.importAnnotations(Path.of("src/test/resources/pdfs/encrypted.pdf")));
     }
 
     @Test
     public void twoAnnotationsThesisExample() {
-        assertEquals(2, importer.importAnnotations(Paths.get("src/test/resources/pdfs/thesis-example.pdf")).size());
+        assertEquals(2, importer.importAnnotations(Path.of("src/test/resources/pdfs/thesis-example.pdf")).size());
     }
 
     @Test
     public void noAnnotationsMinimal() {
-        assertEquals(Collections.emptyList(), importer.importAnnotations(Paths.get("src/test/resources/pdfs/minimal.pdf")));
+        assertEquals(Collections.emptyList(), importer.importAnnotations(Path.of("src/test/resources/pdfs/minimal.pdf")));
     }
 
     @Test
@@ -57,7 +57,7 @@ public class PdfAnnotationImporterTest {
                 "inline note annotation", FileAnnotationType.FREETEXT, Optional.empty());
 
         assertEquals(Collections.singletonList(expected),
-                importer.importAnnotations(Paths.get("src/test/resources/pdfs/minimal-inlinenote.pdf")));
+                importer.importAnnotations(Path.of("src/test/resources/pdfs/minimal-inlinenote.pdf")));
     }
 
     @Test
@@ -66,7 +66,7 @@ public class PdfAnnotationImporterTest {
                 "A simple pop-up note", FileAnnotationType.TEXT, Optional.empty());
 
         assertEquals(Collections.singletonList(expected),
-                importer.importAnnotations(Paths.get("src/test/resources/pdfs/minimal-popup.pdf")));
+                importer.importAnnotations(Path.of("src/test/resources/pdfs/minimal-popup.pdf")));
     }
 
     @Test
@@ -76,7 +76,7 @@ public class PdfAnnotationImporterTest {
         final FileAnnotation expected = new FileAnnotation("lynyus", LocalDateTime.of(2017, 5, 31, 15, 16, 1), 1,
                 "Hello", FileAnnotationType.HIGHLIGHT, Optional.of(expectedLinkedAnnotation));
         assertEquals(Collections.singletonList(expected),
-                importer.importAnnotations(Paths.get("src/test/resources/pdfs/minimal-foxithighlight.pdf")));
+                importer.importAnnotations(Path.of("src/test/resources/pdfs/minimal-foxithighlight.pdf")));
     }
 
     @Test
@@ -87,7 +87,7 @@ public class PdfAnnotationImporterTest {
                 "World", FileAnnotationType.HIGHLIGHT, Optional.of(expectedLinkedAnnotation));
 
         assertEquals(Collections.singletonList(expected),
-                importer.importAnnotations(Paths.get("src/test/resources/pdfs/minimal-highlight-no-note.pdf")));
+                importer.importAnnotations(Path.of("src/test/resources/pdfs/minimal-highlight-no-note.pdf")));
     }
 
     @Test
@@ -98,11 +98,10 @@ public class PdfAnnotationImporterTest {
                 "ello", FileAnnotationType.SQUIGGLY, Optional.of(expectedLinkedAnnotation));
 
         assertEquals(Collections.singletonList(expected),
-                importer.importAnnotations(Paths.get("src/test/resources/pdfs/minimal-squiggly.pdf")));
+                importer.importAnnotations(Path.of("src/test/resources/pdfs/minimal-squiggly.pdf")));
     }
 
     @Test
-
     public void strikeoutWithNoteMinimal() {
         final FileAnnotation expectedLinkedAnnotation = new FileAnnotation("lynyus", LocalDateTime.of(2017, 6, 1, 13, 2, 3), 1,
                 "striked out", FileAnnotationType.STRIKEOUT, Optional.empty());
@@ -110,7 +109,7 @@ public class PdfAnnotationImporterTest {
                 "World", FileAnnotationType.STRIKEOUT, Optional.of(expectedLinkedAnnotation));
 
         assertEquals(Collections.singletonList(expected),
-                importer.importAnnotations(Paths.get("src/test/resources/pdfs/minimal-strikeout.pdf")));
+                importer.importAnnotations(Path.of("src/test/resources/pdfs/minimal-strikeout.pdf")));
     }
 
     @Test
@@ -121,7 +120,7 @@ public class PdfAnnotationImporterTest {
                 "World", FileAnnotationType.HIGHLIGHT, Optional.of(expectedLinkedAnnotation));
 
         assertEquals(Collections.singletonList(expected),
-                importer.importAnnotations(Paths.get("src/test/resources/pdfs/minimal-highlight-with-note.pdf")));
+                importer.importAnnotations(Path.of("src/test/resources/pdfs/minimal-highlight-with-note.pdf")));
     }
 
     @Test
@@ -132,7 +131,7 @@ public class PdfAnnotationImporterTest {
                 "Hello", FileAnnotationType.UNDERLINE, Optional.of(expectedLinkedAnnotation));
 
         assertEquals(Collections.singletonList(expected),
-                importer.importAnnotations(Paths.get("src/test/resources/pdfs/minimal-underline.pdf")));
+                importer.importAnnotations(Path.of("src/test/resources/pdfs/minimal-underline.pdf")));
     }
 
     @Test
@@ -141,7 +140,7 @@ public class PdfAnnotationImporterTest {
                 "polygon annotation", FileAnnotationType.POLYGON, Optional.empty());
 
         assertEquals(Collections.singletonList(expected),
-                importer.importAnnotations(Paths.get("src/test/resources/pdfs/minimal-polygon.pdf")));
+                importer.importAnnotations(Path.of("src/test/resources/pdfs/minimal-polygon.pdf")));
     }
 }
 
